app/src/main/java/com/example/eltory/rejectcall/SetDetail.java
package com.example.eltory.rejectcall;

/**
 * Created by eltory on 2017-04-23.
 */
public class SetDetail {
}
